# Market-Data-Feed-Handler-Assignment

./: CMakeLists.txt  README.md
benchmarks/: bench_latency.cpp.txt  bench_parser.cpp
docs/: DESIGN.md  GBM.md  NETWORK.md.rtf  PERFORMANCE.md.rtf  QUESTIONS.md
include/: protocol.h.txt
scripts/: benchmark_latency.sh  build.sh  run_client.sh  run_demo.sh  run_server.sh
src/client/: feed_handler.cpp  feed_handler.h.txt  main.cpp  parser.cpp  parser.h.txt  socket.cpp.txt  socket.h.txt  visualizer.cpp  visualizer.h
src/common/: cache.cpp  cache.h.txt  latency_tracker.cpp.txt  latency_tracker.h  memory_pool.cpp.txt  memory_pool.h.txt
src/server/: client_manager.cpp  client_manager.h  exchange_simulator.cpp  exchange_simulator.h  main.cpp  tick_generator.cpp.txt  tick_generator.h
tests/: test_cache.cpp  test_gbm.cpp.txt  test_latency_tracker.cpp  test_parser.cpp
